# diimpy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
diimpy/: analyze.py  diim.py  mapping.py  perturbation.py  plot.py
examples/: diimpy.ipynb  example.xlsx
tests/: test_case.py  test_case1.xlsx  test_case10.xlsx  test_case11.xlsx  test_case2.xlsx  test_case3.xlsx  test_case4.xlsx  test_case6.xlsx  test_case7.xlsx  test_case8.xlsx  test_case9.xlsx
